# dict_parser

./: .gitignore  CMakeLists.txt  README.md  build.sh  built_in_parser.cpp  built_in_parser.h  dict_parser.cpp  dict_parser.h  dictparser.sublime-workspace  run_demo.sh  user_type.cpp  user_type.h  util.cpp  util.h
data/: demo_columns_types.config  demo_dict_file.txt
demo/: CMakeLists.txt  dict_parser_demo.cpp
test/: CMakeLists.txt  built_in_parser_test.cpp  dict_parser_test.cpp  dict_parser_tmp.cpp
